# foobar_autostop

./: CMakeLists.txt  LICENSE  README.md
resources/: resource.h  resource.rc
src/: component_version.cpp  foo_autostop.cpp  foo_autostop.rc
